[project]
name = "aws-sns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "fastapi[standard]>=0.139.2",
    "pydantic>=2.13.4",
    "pyjwt>=2.13.0",
    "pymysql>=1.2.0",
    "sqlalchemy>=2.0.51",
]
